--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,23 @@
-.App {
+.Sudoku {
   text-align: center;
+  background-color: #282c34;
+  min-height: 500px;
+  width: 500px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  row-gap: 5px;
+  column-gap: 5px;
+}
+
+.App {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #282c34;
+  flex-direction: column;
+  color: lightgrey;
 }
 
 .App-logo {
@@ -28,11 +46,16 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Tile {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: grey;
+  font-size: 50px;
+}
+
+button {
+  padding: 0px 20px;
+  background-color: grey;
+  color: lightgrey;
 }
